--- a/scss/main.css
+++ b/scss/main.css
@@ -42,8 +42,8 @@
 .banner ul {
   list-style: none;
   padding-left: 10px;
-  -webkit-animation: cambiar 25s infinite;
-          animation: cambiar 25s infinite;
+  -webkit-animation: cambiar 15s infinite;
+          animation: cambiar 15s infinite;
 }
 
 .banner ul, .banner p {
@@ -446,7 +446,7 @@
     font-size: 0%;
   }
   .banner div ul {
-    font-size: 1.1rem;
+    font-size: 4vw;
     text-align: center;
   }
   .banner .wordChanger {
@@ -463,6 +463,23 @@
   }
   .iconoskill {
     font-size: 3rem !important;
+  }
+  .row100 {
+    -ms-grid-columns: (minmax(270px, 1fr))[auto-fit] !important;
+        grid-template-columns: repeat(auto-fit, minmax(270px, 1fr)) !important;
+  }
+  .inputBox input, .text, input[type="submit"] {
+    font-size: 15px !important;
+  }
+  .social {
+    bottom: 1.5vh;
+  }
+  .social a {
+    font-size: 17px !important;
+    margin: 3px !important;
+    padding: 10px !important;
+    width: 294px !important;
+    border-radius: 12px !important;
   }
 }
 
@@ -905,7 +922,7 @@
 
 .contact .container .row100 .col .inputBox textarea:focus + .text,
 .contact .container .row100 .col .inputBox textarea:valid + .text {
-  top: -30px;
+  top: -75px;
   left: -10px;
 }
 
@@ -937,6 +954,14 @@
 
 .contact .container .row100 .col input[type="number"] {
   -moz-appearance: textfield;
+}
+
+.textarea {
+  height: 80px !important;
+}
+
+.message {
+  line-height: 120px !important;
 }
 
 .social {
