--- a/scss/_banner.scss
+++ b/scss/_banner.scss
@@ -33,6 +33,7 @@
     list-style: none;
     padding-left: 10px;
     animation: cambiar 15s infinite;
+    text-align: center;
 }
 ul,p{
     margin: 0;
