--- a/scss/_portfolio.scss
+++ b/scss/_portfolio.scss
@@ -8,7 +8,7 @@
 
   &:before {
     content: "";
-    background: url("../dist/img/pexels-veeterzy-39811.jpg") no-repeat center;
+    background: url("https://images.pexels.com/photos/39811/pexels-photo-39811.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260") no-repeat center;
     background-size: cover;
     position: absolute;
     z-index: 1;
