--- a/scss/_skillset.scss
+++ b/scss/_skillset.scss
@@ -8,7 +8,7 @@
 
   &:before {
     content: "";
-    background-image: url("../dist/img/pexels-bekir-çelik-8618700.jpg");
+    background: url("https://images.pexels.com/photos/8618700/pexels-photo-8618700.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260") no-repeat center;
     background-size: cover;
     position: absolute;
     z-index: 1;
