--- a/scss/main.css
+++ b/scss/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");
 .banner {
   height: 100%;
@@ -44,6 +43,7 @@
   padding-left: 10px;
   -webkit-animation: cambiar 15s infinite;
           animation: cambiar 15s infinite;
+  text-align: center;
 }
 
 .banner ul, .banner p {
@@ -294,7 +294,7 @@
 .main-header .menu-icon_line {
   display: block;
   position: relative;
-  background: #000;
+  color: #000;
   height: 2px;
   width: 20px;
   border-radius: 4px;
@@ -441,13 +441,13 @@
   }
   .banner h1 {
     padding: 5% !important;
+    top: 25vh;
   }
   .banner div p {
     font-size: 0%;
   }
   .banner div ul {
     font-size: 4vw;
-    text-align: center;
   }
   .banner .wordChanger {
     width: 75vw !important;
@@ -494,7 +494,7 @@
 
 .portfolio:before {
   content: "";
-  background: url("../dist/img/pexels-veeterzy-39811.jpg") no-repeat center;
+  background: url("https://images.pexels.com/photos/39811/pexels-photo-39811.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260") no-repeat center;
   background-size: cover;
   position: absolute;
   z-index: 1;
@@ -704,7 +704,7 @@
 
 .skillset:before {
   content: "";
-  background-image: url("../dist/img/pexels-bekir-çelik-8618700.jpg");
+  background: url("https://images.pexels.com/photos/8618700/pexels-photo-8618700.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260") no-repeat center;
   background-size: cover;
   position: absolute;
   z-index: 1;
