responsive6 y estilos a proyectos

--- a/Heroes/contacto/css/style.css
+++ b/Heroes/contacto/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bangers&family=Mouse+Memoirs&display=swap");
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css");
 
 /********** Body *******/
@@ -7,24 +7,19 @@
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
-  font-family: "Roboto", sans-serif;
-}
-.descuento {
-  background-color: #1cd1b0;
-  padding: 0 0 0 1rem;
-  font-size: 1rem;
 }
 
 /******* Header *******/
 header {
   font-size: 2rem;
-  font-weight: bold;
+  color: #e4f9f5;
   position: sticky;
   top: 0;
   z-index: 100;
-  box-shadow: 0 0 30px rgba(0, 0, 0, 0.6);
-  background-color: #00669f;
-  padding: 5px;
+  background-color: #11999e;
+  padding-left: 2rem;
+  letter-spacing: 5px;
+  font-family: "Bangers", cursive;
 }
 
 /************ Main ************/
@@ -34,12 +29,15 @@ header {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  font-family: "Mouse Memoirs", sans-serif;
+  color: #e4f9f5;
+  letter-spacing: 5px;
 }
 main {
-  
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: #40514e;
 }
 label {
   display: block;
@@ -50,10 +48,24 @@ form input {
   width: 50vw;
   padding: 10px;
   resize: none;
+  background-color: #40514e;
+  border-style: solid;
+  border-radius: 1rem;
+  font-size: 1rem;
+  letter-spacing: 2px;
+  color: #e4f9f5;
 }
 textarea {
   width: 50vw;
   height: 20vh;
+  background-color: #40514e;
+  border-style: solid;
+  border-radius: 1rem;
+  padding: 10px;
+  margin: 10px 0;
+  font-size: 1rem;
+  letter-spacing: 2px;
+  color: #e4f9f5;
 }
 .contacto h3 {
   font-size: 3rem;
@@ -69,44 +81,51 @@ a {
 }
 .contacto-botones a,
 .contacto-botones button {
-  background-color: #1cd1b0;
-  font-weight: bold;
+  background-color: #30e3ca;
+
   text-align: center;
   border-radius: 20px;
-  width: 24vw;
-  margin: 0.2rem;
+  width: 12vw;
+  margin: 1rem;
   border: none;
-  padding: 5px;
+  padding: 10px;
 }
 .contacto-botones button {
   background-color: grey;
-  color: white;
+  font-family: "Mouse Memoirs", sans-serif;
+  font-size: 1rem;
+  letter-spacing: 5px;
 }
 .info p a {
-  color: #00669f;
+  color: #30e3ca;
   text-align: center;
 }
 .info {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-bottom: 1rem;
 }
 
 /*********** Footer **********/
 footer {
-  background-color: #00669f;
-  color: white;
+  background-color: #11999e;
+  color: #e4f9f5;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-
+  font-family: "Mouse Memoirs", sans-serif;
   bottom: 0;
   width: 100vw;
-  padding: 1rem;
+  padding: 0.5rem 2rem;
+  font-size: 1rem;
+  letter-spacing: 5px;
 }
 .git {
   text-decoration: none;
-  color: white;
+  color: #e4f9f5;
+  font-size: 1.5rem;
+  margin-left: 1rem;
 }
 
 /********** Responsive ************/
