--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -8,6 +8,9 @@ footer {
     align-items: center;
     display: flex;
     justify-content: center;
+    small{
+      color: #A6ABB2;
+    }
     a{
       margin: 10%;
       text-decoration: none;
