--- a/Heroes/index/css/style.css
+++ b/Heroes/index/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Bangers&family=Mouse+Memoirs&display=swap");
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css");
 
 /********** Body *******/
@@ -7,52 +7,66 @@
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
-  font-family: "Roboto", sans-serif;
 }
-main{
-  background-color: #2B2E4A;
+main {
+  background-color: #364f6b;
 }
 .descuento {
-  background-color: #1cd1b0;
-  padding: 0 0 0 1rem;
+  background-color: #3fc1c9;
+  text-align: right;
+  padding: 3px 2rem 3px;
   font-size: 1rem;
+  color: #393e46;
+  letter-spacing: 5px;
+  font-family: "Mouse Memoirs", sans-serif;
 }
 
 /******* Header *******/
 header {
   font-size: 2rem;
-  font-weight: bold;
+
+  color: #f5f5f5;
+
   position: sticky;
   top: 0;
   z-index: 100;
-  box-shadow: 0 0 30px rgba(0, 0, 0, 0.6);
-  background-color: #E84545;
+
+  background-color: #fc5185;
+}
+header h1 {
+  padding-left: 2rem;
+  letter-spacing: 5px;
+  font-family: "Bangers", cursive;
 }
 header ul li a {
   text-decoration: none;
-  color: white;
-  font-size: 1rem;
+  color: #364f6b;
+  font-size: 2rem;
   padding: 5px;
 }
 header ul li {
   display: inline-block;
 }
 nav {
-  background-color: #903749;
+  background-color: #3fc1c9;
   text-align: right;
   padding-bottom: 9px;
+  padding-right: 2rem;
+  font-family: "Mouse Memoirs", sans-serif;
+  font-size: 2rem;
 }
 
 /******main******/
 .container {
-  padding: 7rem 0;
+  padding: 2rem 0;
   display: flex;
   justify-content: center;
+  color: #364f6b;
 }
 .card {
-  height: auto;
-  width: auto;
-  padding: 2rem;
+  height: 50%;
+  width: 50%;
+  padding: 1rem;
 }
 
 .card-img {
@@ -82,7 +96,7 @@ nav {
   border-radius: 50%;
   bottom: -60px;
   height: 50%;
-  left: calc(50% - 60px);
+  left: calc(50% - 50px);
 }
 
 .batman #corazon,
@@ -98,7 +112,9 @@ nav {
   flex-direction: column;
   align-items: center;
   text-align: justify;
-  background: #f3f3f3;
+  background: #f5f5f5;
+  font-family: "Bangers", cursive;
+  line-height: 2rem;
   /* line-height: para poner interlineado */
 }
 .card-text p {
@@ -114,16 +130,18 @@ nav {
 } */
 
 footer {
-  background-color: #00669f;
-  color: white;
-  padding: 0.7rem;
-  text-align: center;
+  padding: 1rem 2rem;
+
+  text-align: left;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
+  color: #393e46;
+  font-family: "Mouse Memoirs", sans-serif;
+  font-size: 1.5rem;
 }
 .git {
   text-decoration: none;
-  color: white;
+  color: #393e46;
 }
 
 /********** Responsive ************/
@@ -136,10 +154,10 @@ footer {
     width: 50vw;
   }
   .descuento {
-    background-color: #d1891c;
+    background-color: #3fc1c9;
   }
   h1 {
-    color: white;
+    color: #f5f5f5;
   }
   footer p {
     text-align: center;
