--- a/scss/_preloader.scss
+++ b/scss/_preloader.scss
@@ -1,5 +1,5 @@
 #preloader{
-    background: #000 url(/dist/img/7gP7.gif) no-repeat center center;
+    background: #000 url("../dist/img/7gP7.gif") no-repeat center center;
     background-size: 15%;
     height: 100vh;
     width: 100%;
