--- a/scss/main.css
+++ b/scss/main.css
@@ -1064,7 +1064,7 @@ footer div a span {
 }
 
 #preloader {
-  background: #000 url(/dist/img/7gP7.gif) no-repeat center center;
+  background: #000 url("../dist/img/7gP7.gif") no-repeat center center;
   background-size: 15%;
   height: 100vh;
   width: 100%;
