--- a/scss/_banner.scss
+++ b/scss/_banner.scss
@@ -1,125 +1,212 @@
+// .banner {
+//   height: 100%;
+//   display: flex;
+//   justify-content: center;
+//   align-items: center;
+//   color: white;
+//   overflow: hidden;
+//   top: 0;
+//   .banner-video{
+//     position: absolute;
+//     overflow: hidden;
+//     video{
+//       min-width: 100%;
+//       min-height: 100%;
+//     }
+//   }
+//
+
+//
+
+//   h3 {
+//     bottom: 0;
+//     color: black;
+//     z-index: 1;
+//   }
+
+//   video {
+//     z-index: -1;
+
+//   }
+
+//
+//   h2 {
+//     position: absolute;
+//     font-size: calc(1rem + .3vw);
+//     z-index: 2;
+//     color: white;
+//     left: 30%;
+
+//     top: 60vh;
+
+//   }
+
+//   }
 .banner {
-  height: 100%;
   display: flex;
+  color: #fff;
   justify-content: center;
-  align-items: center;
-  color: white;
-  overflow: hidden;
-  top: 0;
-  div{
-    display: flex;
-    width: 69vw;
-    height: 40px;
-    text-transform: uppercase;
-    text-decoration: none;
-    z-index: 2;
-    color: white;
-    justify-content: center;
-    
-    top: 25%;
-    line-height: 40px;
+  padding-bottom: 5vh;
 
+  .banner-video {
     position: absolute;
-    
-    right: 0;
-    bottom: 0;
-    left: 0;
-    
-    margin: auto;
-
+    top: 0;
     overflow: hidden;
-  }
-  ul{
-    list-style: none;
-    padding-left: 10px;
-    animation: cambiar 15s infinite;
     text-align: center;
-}
-ul,p{
-    margin: 0;
-    font-family: "Montserrat", sans-serif;
-    font-size: x-large;
-    text-transform: uppercase;
-    text-decoration: none;
-}
-
-@keyframes cambiar{
-    0%{margin-top: 0px; opacity: 0;}
-    8%{margin-top: 0px; }
-    16%{margin-top: 0px; opacity: 1;}
-    25%{margin-top: 0px; }
-    32%{margin-top: 0px; opacity: 0;}
-
-    33%{margin-top: -40px; opacity: 0;}
-    41%{margin-top: -40px;}
-    49%{margin-top: -40px; opacity: 1;}
-    57%{margin-top: -40px;}
-    65%{margin-top: -40px; opacity: 0;}
-    
-
-    66%{margin-top: -80px; opacity: 0;}
-    74%{margin-top: -80px;}
-    82%{margin-top: -80px; opacity: 1;}
-    90%{margin-top: -80px;}
-    99%{margin-top: -80px; opacity: 0;}
-
-    100%{margin-top: 0px; opacity: 0;}
-    
-}
-
-  h3 {
-    bottom: 0;
-    color: black;
-    z-index: 1;
+    width: -webkit-fill-available;
   }
-
-  video {
-    z-index: -1;
-    
-  }
-
-  h1 {
-    letter-spacing: 5px;
-    position: absolute;
-    font-size: calc(3rem + .5vw);
-    text-transform: uppercase;
-    text-align: center;
-    background: rgba(0, 0, 0, 0.2);
-    padding: 2rem;
-    border-radius: 20px 0;
-    justify-content: center;
-    animation: aparece 5s;
-    top: 30vh;
-
-    &::before,
-    &::after {
-      content: "";
-      position: absolute;
-      top: 0;
-      height: 100%;
-      width: 50%;
-    }
-    &::before {
-      left: 0;
-      border-bottom: 6px solid #000;
-    }
-    &::after {
-      right: 0;
-      border-top: 6px solid #000;
-    }
-  }
-  h2 {
-    position: absolute;
-    font-size: calc(1rem + .3vw);
+  .banner-content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
     z-index: 2;
-    color: white;
-    left: 30%;
-    
-    top: 60vh;
-   
+    max-height: 1440px;
+    margin: 25vh 5% 8vh 5%;
+    position: relative;
+    .banner-titulo {
+      max-width: 100vw;
+      div {
+        position: relative;
+        h1 {
+          letter-spacing: 5px;
+          font-size: calc(2rem + 3vw);
+          text-transform: uppercase;
+          text-align: center;
+          background: rgba(0, 0, 0, 0.2);
+          padding: 2rem;
+          border-radius: 20px 0;
+          justify-content: center;
+          animation: aparece 5s;
+
+          &::before,
+          &::after {
+            content: "";
+            position: absolute;
+            top: 0;
+            height: 100%;
+            width: 50%;
+          }
+          &::before {
+            left: 0;
+            border-bottom: 6px solid #000;
+          }
+          &::after {
+            right: 0;
+            border-top: 6px solid #000;
+          }
+        }
+      }
+      .wordChanger {
+        display: flex;
+        margin-top: 20px;
+        height: 40px;
+        text-transform: uppercase;
+        text-decoration: none;
+        z-index: 2;
+        color: white;
+        justify-content: center;
+        line-height: 40px;
+        overflow: hidden;
+        ul,
+        p {
+          margin: 0;
+          font-family: "Montserrat", sans-serif;
+          font-size: calc(.5em + 1vw);
+          text-transform: uppercase;
+          text-decoration: none;
+        }
+        ul {
+          list-style: none;
+          animation: cambiar 15s infinite;
+          text-align: center;
+        }
+      }
+    }
   }
-  
-  
-  
+}
+.content {
+  margin: auto;
+  text-align: center;
+  height: 1440px;
+}
+
+@keyframes cambiar {
+  0% {
+    margin-top: 0px;
+    opacity: 0;
+  }
+  8% {
+    margin-top: 0px;
+  }
+  16% {
+    margin-top: 0px;
+    opacity: 1;
+  }
+  25% {
+    margin-top: 0px;
+  }
+  32% {
+    margin-top: 0px;
+    opacity: 0;
   }
 
+  33% {
+    margin-top: -40px;
+    opacity: 0;
+  }
+  41% {
+    margin-top: -40px;
+  }
+  49% {
+    margin-top: -40px;
+    opacity: 1;
+  }
+  57% {
+    margin-top: -40px;
+  }
+  65% {
+    margin-top: -40px;
+    opacity: 0;
+  }
+
+  66% {
+    margin-top: -80px;
+    opacity: 0;
+  }
+  74% {
+    margin-top: -80px;
+  }
+  82% {
+    margin-top: -80px;
+    opacity: 1;
+  }
+  90% {
+    margin-top: -80px;
+  }
+  99% {
+    margin-top: -80px;
+    opacity: 0;
+  }
+
+  100% {
+    margin-top: 0px;
+    opacity: 0;
+  }
+}
+
+@media screen and (max-width: 480px){
+  .about-me{
+    flex-direction: column;
+    .img img{
+      width: 50vw;
+      margin-bottom: 20px;
+    }
+    .about-me_texto div {
+      width: 100vw !important;
+  
+    }
+    
+  }
+  
+}
