--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -47,10 +47,11 @@
     z-index: 1;
     display: none;
 
+
     &_line {
       display: block;
       position: relative;
-      color: #000;
+      background: #000;
       height: 2px;
       width: 20px;
       border-radius: 4px;
@@ -83,14 +84,21 @@
     height: 50px;
     background: rgba(0, 0, 0, 0.7);
     color: #fff;
+    .menu-icon {
+      &_line,
+      &_line::before,
+      &_line::after {
+        background: #fff;
+        
+      }
   }
-  .menu-icon {
-    &_line,
-    &_line::before,
-    &_line::after {
-      background: #fff;
+  // .menu-icon {
+  //   &_line,
+  //   &_line::before,
+  //   &_line::after {
+  //     background: #000;
       
-    }
+  //   }
   }
 }
 @keyframes latidos {
