--- a/scss/main.css
+++ b/scss/main.css
@@ -1,25 +1,89 @@
 @import url("https://fonts.googleapis.com/css?family=Montserrat&display=swap");
 .banner {
-  height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  color: #fff;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  color: white;
-  overflow: hidden;
-  top: 0;
+  padding-bottom: 5vh;
 }
 
-.banner div {
+.banner .banner-video {
+  position: absolute;
+  top: 0;
+  overflow: hidden;
+  text-align: center;
+  width: -webkit-fill-available;
+}
+
+.banner .banner-content {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  width: 69vw;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  z-index: 2;
+  max-height: 1440px;
+  margin: 25vh 5% 8vh 5%;
+  position: relative;
+}
+
+.banner .banner-content .banner-titulo {
+  max-width: 100vw;
+}
+
+.banner .banner-content .banner-titulo div {
+  position: relative;
+}
+
+.banner .banner-content .banner-titulo div h1 {
+  letter-spacing: 5px;
+  font-size: calc(2rem + 3vw);
+  text-transform: uppercase;
+  text-align: center;
+  background: rgba(0, 0, 0, 0.2);
+  padding: 2rem;
+  border-radius: 20px 0;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-animation: aparece 5s;
+          animation: aparece 5s;
+}
+
+.banner .banner-content .banner-titulo div h1::before, .banner .banner-content .banner-titulo div h1::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  height: 100%;
+  width: 50%;
+}
+
+.banner .banner-content .banner-titulo div h1::before {
+  left: 0;
+  border-bottom: 6px solid #000;
+}
+
+.banner .banner-content .banner-titulo div h1::after {
+  right: 0;
+  border-top: 6px solid #000;
+}
+
+.banner .banner-content .banner-titulo .wordChanger {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-top: 20px;
   height: 40px;
   text-transform: uppercase;
   text-decoration: none;
@@ -28,30 +92,30 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  top: 25%;
   line-height: 40px;
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  margin: auto;
   overflow: hidden;
 }
 
-.banner ul {
+.banner .banner-content .banner-titulo .wordChanger ul,
+.banner .banner-content .banner-titulo .wordChanger p {
+  margin: 0;
+  font-family: "Montserrat", sans-serif;
+  font-size: calc(.5em + 1vw);
+  text-transform: uppercase;
+  text-decoration: none;
+}
+
+.banner .banner-content .banner-titulo .wordChanger ul {
   list-style: none;
-  padding-left: 10px;
   -webkit-animation: cambiar 15s infinite;
           animation: cambiar 15s infinite;
   text-align: center;
 }
 
-.banner ul, .banner p {
-  margin: 0;
-  font-family: "Montserrat", sans-serif;
-  font-size: x-large;
-  text-transform: uppercase;
-  text-decoration: none;
+.content {
+  margin: auto;
+  text-align: center;
+  height: 1440px;
 }
 
 @-webkit-keyframes cambiar {
@@ -176,58 +240,20 @@
   }
 }
 
-.banner h3 {
-  bottom: 0;
-  color: black;
-  z-index: 1;
-}
-
-.banner video {
-  z-index: -1;
-}
-
-.banner h1 {
-  letter-spacing: 5px;
-  position: absolute;
-  font-size: calc(3rem + .5vw);
-  text-transform: uppercase;
-  text-align: center;
-  background: rgba(0, 0, 0, 0.2);
-  padding: 2rem;
-  border-radius: 20px 0;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-animation: aparece 5s;
-          animation: aparece 5s;
-  top: 30vh;
-}
-
-.banner h1::before, .banner h1::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  height: 100%;
-  width: 50%;
-}
-
-.banner h1::before {
-  left: 0;
-  border-bottom: 6px solid #000;
-}
-
-.banner h1::after {
-  right: 0;
-  border-top: 6px solid #000;
-}
-
-.banner h2 {
-  position: absolute;
-  font-size: calc(1rem + .3vw);
-  z-index: 2;
-  color: white;
-  left: 30%;
-  top: 60vh;
+@media screen and (max-width: 480px) {
+  .about-me {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .about-me .img img {
+    width: 50vw;
+    margin-bottom: 20px;
+  }
+  .about-me .about-me_texto div {
+    width: 100vw !important;
+  }
 }
 
 .main-header {
@@ -294,7 +320,7 @@
 .main-header .menu-icon_line {
   display: block;
   position: relative;
-  color: #000;
+  background: #000;
   height: 2px;
   width: 20px;
   border-radius: 4px;
@@ -333,7 +359,7 @@
   color: #fff;
 }
 
-.main-header .menu-icon_line, .main-header .menu-icon_line::before, .main-header .menu-icon_line::after {
+.main-header.scrolled .menu-icon_line, .main-header.scrolled .menu-icon_line::before, .main-header.scrolled .menu-icon_line::after {
   background: #fff;
 }
 
@@ -417,40 +443,6 @@
     opacity: 1;
     -webkit-transition: opacity 2s ease-in-out;
     transition: opacity 2s ease-in-out;
-  }
-  .about-me #fotoPerfil {
-    top: -5vh !important;
-    width: 60vw !important;
-    left: 35% !important;
-  }
-  .about-me div .about-me_texto {
-    top: -60vh !important;
-  }
-  .about-me div .about-me_texto div {
-    -webkit-box-align: center !important;
-        -ms-flex-align: center !important;
-            align-items: center !important;
-    width: 100vw !important;
-    left: 0 !important;
-  }
-  .about-me div .about-me_texto div p {
-    text-align: justify;
-  }
-  .banner h1 {
-    padding: 5% !important;
-    top: 25vh;
-  }
-  .banner div p {
-    font-size: 0%;
-  }
-  .banner div ul {
-    font-size: 4vw;
-  }
-  .banner .wordChanger {
-    width: 75vw !important;
-    -webkit-box-pack: start !important;
-        -ms-flex-pack: start !important;
-            justify-content: flex-start !important;
   }
   .skillset:before {
     background-position-x: 50% !important;
@@ -598,55 +590,32 @@
   background: white !important;
 }
 
-.about-me {
-  top: 0;
-  left: 0;
-  overflow: hidden;
-  background: black;
-}
-
-.about-me .animado {
+.animado {
   -webkit-animation: aparece 10s;
           animation: aparece 10s;
 }
 
-.about-me div {
-  position: absolute;
-  top: 100%;
+.about-me {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100vw;
+  height: 100vh;
+  padding: 5% 0;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
 }
 
-.about-me div input {
-  position: relative;
-  top: -50px;
-  visibility: hidden;
-}
-
-.about-me div div img {
-  position: relative;
-  left: 50%;
+.about-me div img {
   border-radius: 50%;
   width: 25vw;
-  top: 15vh;
 }
 
-.about-me div .about-me_texto {
-  height: 90vh;
-  top: -35rem;
-}
-
-.about-me div .about-me_texto div {
-  position: relative;
-  color: white;
-  left: 50vw;
-  width: 40vw;
-  border-radius: 20px 0;
+.about-me .about-me_texto {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -654,19 +623,25 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  background: rgba(255, 255, 255, 0.1);
-  padding: 9%;
-  margin-bottom: 20px;
 }
 
-.about-me div .about-me_texto div h2 {
+.about-me .about-me_texto div {
+  color: white;
+  width: 40vw;
+  border-radius: 20px 0;
+  margin: 3% 0;
+  background: rgba(255, 255, 255, 0.1);
+  padding: 9%;
+}
+
+.about-me .about-me_texto div h2 {
   text-transform: uppercase;
   text-decoration: none;
   font-size: calc(.9rem + .7vw);
   font-weight: unset;
 }
 
-.about-me div .about-me_texto div p {
+.about-me .about-me_texto div p {
   font-size: calc(.8rem + .1vw);
 }
 
@@ -962,7 +937,7 @@
 }
 
 .social {
-  z-index: 2;
+  z-index: 3;
   position: fixed;
   bottom: 3rem;
   right: 0;
@@ -1029,6 +1004,13 @@
 .social a:hover {
   -webkit-transform: translate(-130px, 0);
           transform: translate(-130px, 0);
+}
+
+@media screen and (max-width: 480px) {
+  .social a:hover {
+    -webkit-transform: translate(0);
+            transform: translate(0);
+  }
 }
 
 footer {
