color background banner

--- a/scss/_banner.scss
+++ b/scss/_banner.scss
@@ -47,6 +47,7 @@
   color: #fff;
   justify-content: center;
   padding-bottom: 5vh;
+  background-color: #000;
 
   .banner-video {
     position: absolute;
@@ -54,6 +55,7 @@
     overflow: hidden;
     text-align: center;
     width: -webkit-fill-available;
+    
   }
   .banner-content {
     display: flex;
