--- a/scss/main.css
+++ b/scss/main.css
@@ -8,6 +8,7 @@
       -ms-flex-pack: center;
           justify-content: center;
   padding-bottom: 5vh;
+  background-color: #000;
 }
 
 .banner .banner-video {
