--- a/scss/_banner.scss
+++ b/scss/_banner.scss
@@ -47,7 +47,9 @@
   color: #fff;
   justify-content: center;
   padding-bottom: 5vh;
+  background-size: cover;
   
+  background-image: url(https://images.pexels.com/photos/3265460/pexels-photo-3265460.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260);
 
   .banner-video {
     position: absolute;
