--- a/scss/social.css
+++ b/scss/social.css
@@ -74,4 +74,17 @@
             transform: translate(0);
   }
 }
+
+@media screen and (max-width: 760px) {
+  .social {
+    bottom: 1.5vh;
+  }
+  .social a {
+    font-size: 17px !important;
+    margin: 3px !important;
+    padding: 10px !important;
+    width: 294px !important;
+    border-radius: 12px !important;
+  }
+}
 /*# sourceMappingURL=social.css.map */
