--- a/scss/_banner.scss
+++ b/scss/_banner.scss
@@ -82,7 +82,7 @@
           padding: 2rem;
           border-radius: 20px 0;
           justify-content: center;
-          animation: aparece 5s;
+          // animation: aparece 5s;
 
           &::before,
           &::after {
