--- a/scss/_portfolio.scss
+++ b/scss/_portfolio.scss
@@ -83,11 +83,14 @@
   border: 2px solid #646464 !important;
   transition: all 0.3s ease;
 }
-.owl-dot-active {
+.owl-dot:active {
   width: 35px;
   border-radius: 19px;
 }
-.owl-dot.active,
+.owl-dot:active,
 .owl-dot:hover {
   background: white !important;
+}
+.owl-stage{
+  transition: all 2s ease 0s !important;
 }
