--- a/scss/main.css
+++ b/scss/main.css
@@ -59,8 +59,6 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-animation: aparece 5s;
-          animation: aparece 5s;
 }
 
 .banner .banner-content .banner-titulo div h1::before, .banner .banner-content .banner-titulo div h1::after {
@@ -572,19 +570,19 @@
   transition: all 0.3s ease;
 }
 
-.owl-dot-active {
+.owl-dot:active {
   width: 35px;
   border-radius: 19px;
 }
 
-.owl-dot.active,
+.owl-dot:active,
 .owl-dot:hover {
   background: white !important;
 }
 
-.animado {
-  -webkit-animation: aparece 10s;
-          animation: aparece 10s;
+.owl-stage {
+  -webkit-transition: all 2s ease 0s !important;
+  transition: all 2s ease 0s !important;
 }
 
 .about-me {
@@ -634,24 +632,6 @@
 
 .about-me .about-me_texto div p {
   font-size: calc(.8rem + .1vw);
-}
-
-@-webkit-keyframes aparece {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
-}
-
-@keyframes aparece {
-  0% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-  }
 }
 
 .skillset {
@@ -768,6 +748,7 @@
 .contact {
   min-height: 75vh;
   background: black;
+  overflow: hidden;
 }
 
 .contact h3 {
