--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -4,7 +4,7 @@
   overflow: hidden;
 
   h3 {
-    color: #4D5865;
+    color: #7C83FD;
     text-align: end;
     padding-right: 10%;
     
@@ -32,7 +32,7 @@
           position: relative;
           width: 100%;
           height: 40px;
-          color: #4D5865;
+          color: #7C83FD;
           text-transform: uppercase;
 
           
@@ -74,7 +74,7 @@
             display: block;
             width: 100%;
             height: 2px;
-            background: #4D5865;
+            background: #7C83FD;
             transition: 0.5s;
             border-radius: 2px;
             pointer-events: none;
@@ -109,7 +109,7 @@
           padding: 7px 35px;
           cursor: pointer;
           outline: none;
-          background: #4D5865;
+          background: #7C83FD;
           color: black;
           font-size: 18px;
           border-radius: 2px;
