--- a/scss/main.css
+++ b/scss/main.css
@@ -116,6 +116,7 @@
   margin: auto;
   text-align: center;
   height: 1440px;
+  overflow: hidden;
 }
 
 @-webkit-keyframes cambiar {
@@ -752,7 +753,7 @@
 }
 
 .contact h3 {
-  color: #4D5865;
+  color: #7C83FD;
   text-align: end;
   padding-right: 10%;
 }
@@ -793,7 +794,7 @@
   position: relative;
   width: 100%;
   height: 40px;
-  color: #4D5865;
+  color: #7C83FD;
   text-transform: uppercase;
 }
 
@@ -838,7 +839,7 @@
   display: block;
   width: 100%;
   height: 2px;
-  background: #4D5865;
+  background: #7C83FD;
   -webkit-transition: 0.5s;
   transition: 0.5s;
   border-radius: 2px;
@@ -878,7 +879,7 @@
   padding: 7px 35px;
   cursor: pointer;
   outline: none;
-  background: #4D5865;
+  background: #7C83FD;
   color: black;
   font-size: 18px;
   border-radius: 2px;
@@ -1030,16 +1031,16 @@ footer div a span {
   z-index: 100;
 }
 
+.snap {
+  scroll-snap-align: start;
+}
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   margin: 0;
   padding: 0;
   font-family: "Montserrat", sans-serif;
-}
-
-* ::-webkit-scrollbar {
-  display: none;
 }
 
 * h3 {
