--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -21,7 +21,7 @@
       height: 100vh;
       font-size: 2rem;
       color: #fff;
-      background: #272727;
+      background: #2f2f2f;
       transition: opacity 1s 1s, clip-path 2s 1s;
       clip-path: circle(200px at top right);
       .nav-link {
