--- a/scss/main.css
+++ b/scss/main.css
@@ -71,12 +71,12 @@
 
 .banner .banner-content .banner-titulo div h1::before {
   left: 0;
-  border-bottom: 6px solid #000;
+  border-bottom: 6px solid #040404;
 }
 
 .banner .banner-content .banner-titulo div h1::after {
   right: 0;
-  border-top: 6px solid #000;
+  border-top: 6px solid #040404;
 }
 
 .banner .banner-content .banner-titulo .wordChanger {
@@ -105,11 +105,17 @@
   text-decoration: none;
 }
 
+.banner .banner-content .banner-titulo .wordChanger ul span,
+.banner .banner-content .banner-titulo .wordChanger p span {
+  color: #4fe1d0;
+}
+
 .banner .banner-content .banner-titulo .wordChanger ul {
   list-style: none;
   -webkit-animation: cambiar 15s infinite;
           animation: cambiar 15s infinite;
   text-align: center;
+  color: #2f2f2f;
 }
 
 .content {
@@ -271,7 +277,7 @@
   height: 65px;
   width: 100vw;
   padding: 0 10vw;
-  color: #000;
+  color: #040404;
   z-index: 10;
   -webkit-transition: 1s ease-out;
   transition: 1s ease-out;
@@ -286,7 +292,15 @@
   cursor: pointer;
 }
 
+.main-header .logo span,
+.main-header a span,
+.main-header i span {
+  text-transform: none;
+  color: #4fe1d0;
+}
+
 .main-header i {
+  color: #4fe1d0;
   margin-right: 1rem;
   -webkit-animation: latidos 2s infinite;
           animation: latidos 2s infinite;
@@ -321,7 +335,7 @@
 .main-header .menu-icon_line {
   display: block;
   position: relative;
-  background: #000;
+  background: #4fe1d0;
   height: 2px;
   width: 20px;
   border-radius: 4px;
@@ -335,7 +349,7 @@
   height: 100%;
   width: 100%;
   border-radius: 4px;
-  background: #000;
+  background: #4fe1d0;
   -webkit-transition: background 0.8s ease;
   transition: background 0.8s ease;
 }
@@ -418,7 +432,7 @@
     height: 100vh;
     font-size: 2rem;
     color: #fff;
-    background: #272727;
+    background: #2f2f2f;
     -webkit-transition: opacity 1s 1s, -webkit-clip-path 2s 1s;
     transition: opacity 1s 1s, -webkit-clip-path 2s 1s;
     transition: opacity 1s 1s, clip-path 2s 1s;
@@ -748,12 +762,12 @@
 
 .contact {
   min-height: 75vh;
-  background: black;
+  background: #040404;
   overflow: hidden;
 }
 
 .contact h3 {
-  color: #7C83FD;
+  color: #4fe1d0;
   text-align: end;
   padding-right: 10%;
 }
@@ -794,7 +808,7 @@
   position: relative;
   width: 100%;
   height: 40px;
-  color: #7C83FD;
+  color: #4fe1d0;
   text-transform: uppercase;
 }
 
@@ -811,7 +825,7 @@
   font-size: 18px;
   padding: 0 10px;
   z-index: 1;
-  color: black;
+  color: #040404;
 }
 
 .contact .container .row100 .col .inputBox .text {
@@ -839,7 +853,7 @@
   display: block;
   width: 100%;
   height: 2px;
-  background: #7C83FD;
+  background: #4fe1d0;
   -webkit-transition: 0.5s;
   transition: 0.5s;
   border-radius: 2px;
@@ -879,8 +893,8 @@
   padding: 7px 35px;
   cursor: pointer;
   outline: none;
-  background: #7C83FD;
-  color: black;
+  background: #4fe1d0;
+  color: #040404;
   font-size: 18px;
   border-radius: 2px;
 }
@@ -962,14 +976,22 @@
 }
 
 .social a:nth-child(2) i {
-  color: #0e76a8;
+  color: #735acf;
 }
 
 .social a:nth-child(3) i {
   color: transparent;
-  background-image: linear-gradient(45deg, #ffdf9e, #e56969, #8a49a1);
+  background-image: linear-gradient(45deg, #4fe1d0, #b7a8e7, #735acf);
   -webkit-background-clip: text;
   font-weight: 600;
+}
+
+.social a:nth-child(4) i {
+  color: #4fe1d0;
+}
+
+.social a:nth-child(5) i {
+  color: white;
 }
 
 .social a:hover {
@@ -992,7 +1014,7 @@
 
 footer {
   height: 25vh;
-  background-color: #112031;
+  background-color: #2f2f2f;
 }
 
 footer div {
@@ -1009,17 +1031,19 @@ footer div {
 }
 
 footer div small {
-  color: #A6ABB2;
+  color: #5b5e62;
+  text-decoration: none;
 }
 
 footer div a {
   margin: 10%;
   text-decoration: none;
-  text-transform: uppercase;
+  color: #A6ABB2;
 }
 
 footer div a span {
-  color: #A6ABB2;
+  text-transform: uppercase;
+  color: #5b5e62;
 }
 
 #preloader {
