tratando de resolver 4

--- a/scss/_skillset.scss
+++ b/scss/_skillset.scss
@@ -73,3 +73,7 @@
   opacity: 1;
   transform: translate(-60px);
 }
+.hardskills-container .hardskills div:hover .iconoskill {
+  color:#4fe1d0;
+}
+
