--- a/scss/main.scss
+++ b/scss/main.scss
@@ -17,10 +17,10 @@
 * {
  
   
-  // ::-webkit-scrollbar {
-  //   display: none;
+  ::-webkit-scrollbar {
+    display: none;
     
-  // }
+  }
   box-sizing: border-box;
 
   margin: 0;
