--- a/scss/_portfolio.scss
+++ b/scss/_portfolio.scss
@@ -80,16 +80,16 @@
   outline: none !important;
   border-radius: 50%;
   margin-top: 0 5px;
-  border: 2px solid #646464 !important;
+  border: 2px solid #4fe1d0 !important;
   transition: all 0.3s ease;
 }
-.owl-dot:active {
+.owl-dot.active {
   width: 35px;
   border-radius: 19px;
 }
-.owl-dot:active,
+.owl-dot.active,
 .owl-dot:hover {
-  background: white !important;
+  background: #2f2f2f !important;
 }
 .owl-stage{
   transition: all 2s ease 0s !important;
