--- a/scss/main.css
+++ b/scss/main.css
@@ -580,19 +580,19 @@
   outline: none !important;
   border-radius: 50%;
   margin-top: 0 5px;
-  border: 2px solid #646464 !important;
+  border: 2px solid #4fe1d0 !important;
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
 }
 
-.owl-dot:active {
+.owl-dot.active {
   width: 35px;
   border-radius: 19px;
 }
 
-.owl-dot:active,
+.owl-dot.active,
 .owl-dot:hover {
-  background: white !important;
+  background: #2f2f2f !important;
 }
 
 .owl-stage {
@@ -734,10 +734,20 @@
           transform: translate(-60px);
 }
 
+.hardskills-container .hardskills div:hover .iconoskill {
+  color: #4fe1d0;
+}
+
 .soft-skills {
   height: 100vh;
-  background-size: cover;
   z-index: 3;
+}
+
+.soft-skills video {
+  left: 0;
+  position: absolute;
+  z-index: 2;
+  width: 100vw;
 }
 
 .soft-skills .ssContainer {
@@ -746,6 +756,7 @@
 
 .soft-skills .ssContainer .softskills {
   background-color: rgba(255, 255, 255, 0.05);
+  z-index: 3;
   height: 50vh;
   display: -ms-grid;
   display: grid;
@@ -754,10 +765,32 @@
 }
 
 .soft-skills .ssContainer .softskills h4 {
+  cursor: pointer;
   color: white;
   font-size: 2.5rem;
-  z-index: 1;
-  position: absolute;
+  z-index: 4;
+  position: relative;
+}
+
+.soft-skills .ssContainer .fas {
+  display: none;
+  position: relative;
+  z-index: 4;
+  font-size: 50px;
+  color: white;
+  cursor: pointer;
+}
+
+.soft-skills .ssContainer h4:hover {
+  -webkit-transform: scale(0.9);
+          transform: scale(0.9);
+  color: aqua;
+}
+
+.soft-skills .ssContainer .fas:hover {
+  -webkit-transform: scale(0.9);
+          transform: scale(0.9);
+  color: aqua;
 }
 
 .contact {
@@ -940,8 +973,8 @@
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
-  -webkit-transform: translate(250px);
-          transform: translate(250px);
+  -webkit-transform: translate(230px);
+          transform: translate(230px);
 }
 
 .social a {
@@ -953,7 +986,7 @@
   display: block;
   margin: 3px;
   padding: 10px;
-  width: 294px;
+  width: 244px;
   text-align: left;
   border-radius: 12px;
   -webkit-transition: 1s;
@@ -1065,6 +1098,10 @@ footer div a span {
   margin: 0;
   padding: 0;
   font-family: "Montserrat", sans-serif;
+}
+
+* ::-webkit-scrollbar {
+  display: none;
 }
 
 * h3 {
