interactive video-new videos

--- a/ThanksPage/scss/_thanksPage.scss
+++ b/ThanksPage/scss/_thanksPage.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   height: 100vh;
-  background-color: #03080a;
+  background-color: var(--secondary);
   padding: 5%;
   justify-content: center;
   
