--- a/scss/_media.scss
+++ b/scss/_media.scss
@@ -59,14 +59,21 @@
     }
     
   }
+  .softskills{
+    video{
+      width: 100vw;
+      min-height: 100vh;
+    }
+    div{
 
-  .softskills div{
-
-    h4{
-      font-size: xx-large !important;
+      h4{
+        font-size: xx-large !important;
+      }
+  
     }
 
   }
+  
   .iconoskill{
     font-size: 3rem !important;
   }
