--- a/scss/_preloader.scss
+++ b/scss/_preloader.scss
@@ -1,6 +1,6 @@
 #preloader{
-    background: #000 url("../dist/img/7gP7.gif") no-repeat center center;
-    background-size: 15%;
+    background: black url("../dist/img/7gP7.gif") no-repeat center center;
+    background-size: 12%;
     height: 100vh;
     width: 100%;
     position: fixed;
