--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,6 +11,13 @@
 @import "footer";
 @import "preloader";
 
+:root{
+  --main:#4fe1d0;
+  --secondary:#040404;
+  --tertiary:#2f2f2f;
+  --quaternary:#fff;
+}
+
 .snap{
   scroll-snap-align: start;
 }
