--- a/scss/_banner.scss
+++ b/scss/_banner.scss
@@ -94,11 +94,11 @@
           }
           &::before {
             left: 0;
-            border-bottom: 6px solid #040404;
+            border-bottom: 6px solid var(--tertiary);
           }
           &::after {
             right: 0;
-            border-top: 6px solid #040404;
+            border-top: 6px solid var(--tertiary);
           }
         }
       }
@@ -117,18 +117,18 @@
         p {
           margin: 0;
           font-family: "Montserrat", sans-serif;
-          font-size: calc(.5em + 1vw);
+          font-size: calc(.5em + 1.5vw);
           text-transform: uppercase;
           text-decoration: none;
           span{
-            color: #4fe1d0;
+            color: var(--main);
           }
         }
         ul {
           list-style: none;
           animation: cambiar 15s infinite;
           text-align: center;
-          color: #2f2f2f;
+          color: var(--tertiary);
         }
       }
     }
