--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -1,10 +1,10 @@
 .contact {
   min-height: 100vh;
-  background: #040404;
+  background: var(--secondary);
   overflow: hidden;
 
   h3 {
-    color: #4fe1d0;
+    color: var(--main);
     text-align: end;
     padding-right: 10%;
     
@@ -32,7 +32,7 @@
           position: relative;
           width: 100%;
           height: 40px;
-          color: #4fe1d0;
+          color: var(--main);
           text-transform: uppercase;
 
           
@@ -49,7 +49,7 @@
             font-size: 18px;
             padding: 0 10px;
             z-index: 1;
-            color: #040404;
+            color: var(--secondary);
           }
           .text {
             position: absolute;
@@ -74,7 +74,7 @@
             display: block;
             width: 100%;
             height: 2px;
-            background: #4fe1d0;
+            background: var(--main);
             transition: 0.5s;
             border-radius: 2px;
             pointer-events: none;
@@ -109,8 +109,8 @@
           padding: 7px 35px;
           cursor: pointer;
           outline: none;
-          background: #4fe1d0;
-          color: #040404;
+          background: var(--main);
+          color: var(--secondary);
           font-size: 18px;
           border-radius: 2px;
           
