--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -6,25 +6,25 @@
   height: 65px;
   width: 100vw;
   padding: 0 10vw;
-  color: #040404;
+  color: var(--secondary);
   z-index: 10;
   transition: 1s ease-out;
   
 
   .logo,
-  a,
-  i {
+  a {
     text-decoration: none;
-    color: inherit;
+    color: var(--tertiary);
     text-transform: uppercase;
     cursor: pointer;
     span{
       text-transform: none;
-      color: #4fe1d0;
+      color: gray;
     }
   }
+  
   i{
-    color: #4fe1d0;
+    color: var(--main);
     margin-right: 1rem;
     animation: latidos 2s infinite;
     transform-origin: center;
@@ -57,7 +57,7 @@
     &_line {
       display: block;
       position: relative;
-      background: #4fe1d0;
+      background: var(--main);
       height: 2px;
       width: 20px;
       border-radius: 4px;
@@ -70,7 +70,7 @@
         height: 100%;
         width: 100%;
         border-radius: 4px;
-        background: #4fe1d0;
+        background: var(--main);
         transition: background 0.8s ease;
       }
       &::before {
@@ -89,27 +89,27 @@
   &.scrolled {
     height: 50px;
     background: rgba(0, 0, 0, 0.7);
-    color: #fff;
+    
     .menu-icon {
       &_line,
       &_line::before,
       &_line::after {
-        background: #fff;
+        background: #fff !important;
         
       }
-  }
-  // .menu-icon {
-  //   &_line,
-  //   &_line::before,
-  //   &_line::after {
-  //     background: #000;
       
-  //   }
+    }
+    a, .nav-links a{
+      color: #fff !important; 
+    }
   }
 }
 @keyframes latidos {
   from { transform: none; }
   50% { transform: scale(1.4); }
   to { transform: none; }
+}
+#conta{
+  color: var(--main) !important;
 }
 
