--- a/scss/_soft-skills.scss
+++ b/scss/_soft-skills.scss
@@ -1,13 +1,16 @@
 .soft-skills {
   height: 100vh;
- 
+  width: 100vw;
+  position: relative;
+  overflow: hidden;
   
   z-index: 3;
   video{
-    left: 0;
+    left: 0%;
     position: absolute;
     z-index: 2;
-    width: 100vw;
+    min-width: 100vw;
+    height: 100vh;
   }
 
   .ssContainer {
@@ -41,12 +44,12 @@
       cursor: pointer;
     }
     h4:hover{
-      transform: scale(.9);
-      color:aqua;
+      transform: scale(.95);
+      color:var(--main);
     }
     .fas:hover{
-      transform: scale(.9);
-      color:aqua;
+      transform: scale(.95);
+      color:var(--main);
     }
     
   }
