--- a/scss/main.css
+++ b/scss/main.css
@@ -71,12 +71,12 @@
 
 .banner .banner-content .banner-titulo div h1::before {
   left: 0;
-  border-bottom: 6px solid #040404;
+  border-bottom: 6px solid var(--tertiary);
 }
 
 .banner .banner-content .banner-titulo div h1::after {
   right: 0;
-  border-top: 6px solid #040404;
+  border-top: 6px solid var(--tertiary);
 }
 
 .banner .banner-content .banner-titulo .wordChanger {
@@ -100,14 +100,14 @@
 .banner .banner-content .banner-titulo .wordChanger p {
   margin: 0;
   font-family: "Montserrat", sans-serif;
-  font-size: calc(.5em + 1vw);
+  font-size: calc(.5em + 1.5vw);
   text-transform: uppercase;
   text-decoration: none;
 }
 
 .banner .banner-content .banner-titulo .wordChanger ul span,
 .banner .banner-content .banner-titulo .wordChanger p span {
-  color: #4fe1d0;
+  color: var(--main);
 }
 
 .banner .banner-content .banner-titulo .wordChanger ul {
@@ -115,7 +115,7 @@
   -webkit-animation: cambiar 15s infinite;
           animation: cambiar 15s infinite;
   text-align: center;
-  color: #2f2f2f;
+  color: var(--tertiary);
 }
 
 .content {
@@ -277,30 +277,28 @@
   height: 65px;
   width: 100vw;
   padding: 0 10vw;
-  color: #040404;
+  color: var(--secondary);
   z-index: 10;
   -webkit-transition: 1s ease-out;
   transition: 1s ease-out;
 }
 
 .main-header .logo,
-.main-header a,
-.main-header i {
+.main-header a {
   text-decoration: none;
-  color: inherit;
+  color: var(--tertiary);
   text-transform: uppercase;
   cursor: pointer;
 }
 
 .main-header .logo span,
-.main-header a span,
-.main-header i span {
+.main-header a span {
   text-transform: none;
-  color: #4fe1d0;
+  color: gray;
 }
 
 .main-header i {
-  color: #4fe1d0;
+  color: var(--main);
   margin-right: 1rem;
   -webkit-animation: latidos 2s infinite;
           animation: latidos 2s infinite;
@@ -335,7 +333,7 @@
 .main-header .menu-icon_line {
   display: block;
   position: relative;
-  background: #4fe1d0;
+  background: var(--main);
   height: 2px;
   width: 20px;
   border-radius: 4px;
@@ -349,7 +347,7 @@
   height: 100%;
   width: 100%;
   border-radius: 4px;
-  background: #4fe1d0;
+  background: var(--main);
   -webkit-transition: background 0.8s ease;
   transition: background 0.8s ease;
 }
@@ -371,11 +369,14 @@
 .main-header.scrolled {
   height: 50px;
   background: rgba(0, 0, 0, 0.7);
-  color: #fff;
 }
 
 .main-header.scrolled .menu-icon_line, .main-header.scrolled .menu-icon_line::before, .main-header.scrolled .menu-icon_line::after {
-  background: #fff;
+  background: #fff !important;
+}
+
+.main-header.scrolled a, .main-header.scrolled .nav-links a {
+  color: #fff !important;
 }
 
 @-webkit-keyframes latidos {
@@ -406,6 +407,10 @@
     -webkit-transform: none;
             transform: none;
   }
+}
+
+#conta {
+  color: var(--main) !important;
 }
 
 @media screen and (max-width: 760px) {
@@ -462,6 +467,10 @@
   .skillset:before {
     background-position-x: 50% !important;
   }
+  .softskills video {
+    width: 100vw;
+    min-height: 100vh;
+  }
   .softskills div h4 {
     font-size: xx-large !important;
   }
@@ -479,7 +488,7 @@
 
 .portfolio {
   position: relative;
-  background: black;
+  background: var(--secondary);
   overflow: hidden;
   text-align: center;
   height: 100vh;
@@ -529,7 +538,7 @@
 
 .portfolio .carousel .card a {
   text-decoration: none;
-  color: #646464;
+  color: #5b5e62;
 }
 
 .portfolio .carousel .card .box {
@@ -580,7 +589,7 @@
   outline: none !important;
   border-radius: 50%;
   margin-top: 0 5px;
-  border: 2px solid #4fe1d0 !important;
+  border: 2px solid var(--main) !important;
   -webkit-transition: all 0.3s ease;
   transition: all 0.3s ease;
 }
@@ -588,11 +597,6 @@
 .owl-dot.active {
   width: 35px;
   border-radius: 19px;
-}
-
-.owl-dot.active,
-.owl-dot:hover {
-  background: #2f2f2f !important;
 }
 
 .owl-stage {
@@ -656,7 +660,7 @@
 .skillset {
   height: 100%;
   position: relative;
-  background: black;
+  background: var(--secondary);
   overflow: hidden;
   text-align: center;
   z-index: 3;
@@ -719,7 +723,7 @@
   transition: opacity 0.5s ease-in-out, -webkit-transform 0.5s cubic-bezier(0.4, 0, 1, 1);
   transition: opacity 0.5s ease-in-out, transform 0.5s cubic-bezier(0.4, 0, 1, 1);
   transition: opacity 0.5s ease-in-out, transform 0.5s cubic-bezier(0.4, 0, 1, 1), -webkit-transform 0.5s cubic-bezier(0.4, 0, 1, 1);
-  color: black;
+  color: var(--secondary);
 }
 
 .skillset .hardskills-container .hardskills div span::after {
@@ -739,19 +743,23 @@
 }
 
 .hardskills-container .hardskills div:hover .iconoskill {
-  color: #4fe1d0;
+  color: var(--main);
 }
 
 .soft-skills {
   height: 100vh;
+  width: 100vw;
+  position: relative;
+  overflow: hidden;
   z-index: 3;
 }
 
 .soft-skills video {
-  left: 0;
+  left: 0%;
   position: absolute;
   z-index: 2;
-  width: 100vw;
+  min-width: 100vw;
+  height: 100vh;
 }
 
 .soft-skills .ssContainer {
@@ -786,25 +794,25 @@
 }
 
 .soft-skills .ssContainer h4:hover {
-  -webkit-transform: scale(0.9);
-          transform: scale(0.9);
-  color: aqua;
+  -webkit-transform: scale(0.95);
+          transform: scale(0.95);
+  color: var(--main);
 }
 
 .soft-skills .ssContainer .fas:hover {
-  -webkit-transform: scale(0.9);
-          transform: scale(0.9);
-  color: aqua;
+  -webkit-transform: scale(0.95);
+          transform: scale(0.95);
+  color: var(--main);
 }
 
 .contact {
   min-height: 100vh;
-  background: #040404;
+  background: var(--secondary);
   overflow: hidden;
 }
 
 .contact h3 {
-  color: #4fe1d0;
+  color: var(--main);
   text-align: end;
   padding-right: 10%;
 }
@@ -845,7 +853,7 @@
   position: relative;
   width: 100%;
   height: 40px;
-  color: #4fe1d0;
+  color: var(--main);
   text-transform: uppercase;
 }
 
@@ -862,7 +870,7 @@
   font-size: 18px;
   padding: 0 10px;
   z-index: 1;
-  color: #040404;
+  color: var(--secondary);
 }
 
 .contact .container .row100 .col .inputBox .text {
@@ -890,7 +898,7 @@
   display: block;
   width: 100%;
   height: 2px;
-  background: #4fe1d0;
+  background: var(--main);
   -webkit-transition: 0.5s;
   transition: 0.5s;
   border-radius: 2px;
@@ -930,8 +938,8 @@
   padding: 7px 35px;
   cursor: pointer;
   outline: none;
-  background: #4fe1d0;
-  color: #040404;
+  background: var(--main);
+  color: var(--secondary);
   font-size: 18px;
   border-radius: 2px;
 }
@@ -1009,7 +1017,7 @@
 }
 
 .social a:nth-child(1) i {
-  color: white;
+  color: #5b5e62;
 }
 
 .social a:nth-child(2) i {
@@ -1018,17 +1026,17 @@
 
 .social a:nth-child(3) i {
   color: transparent;
-  background-image: linear-gradient(45deg, #4fe1d0, #b7a8e7, #735acf);
+  background-image: linear-gradient(45deg, var(--main), #b7a8e7, #735acf);
   -webkit-background-clip: text;
   font-weight: 600;
 }
 
 .social a:nth-child(4) i {
-  color: #4fe1d0;
+  color: var(--main);
 }
 
 .social a:nth-child(5) i {
-  color: white;
+  color: #5b5e62;
 }
 
 .social a:hover {
@@ -1051,7 +1059,7 @@
 
 footer {
   height: 25vh;
-  background-color: #2f2f2f;
+  background-color: var(--tertiary);
 }
 
 footer div {
@@ -1084,12 +1092,19 @@ footer div a span {
 }
 
 #preloader {
-  background: #000 url("../dist/img/7gP7.gif") no-repeat center center;
-  background-size: 15%;
+  background: black url("../dist/img/7gP7.gif") no-repeat center center;
+  background-size: 12%;
   height: 100vh;
   width: 100%;
   position: fixed;
   z-index: 100;
+}
+
+:root {
+  --main:#4fe1d0;
+  --secondary:#040404;
+  --tertiary:#2f2f2f;
+  --quaternary:#fff;
 }
 
 .snap {
