cambio de color social

--- a/scss/_soft-skills.scss
+++ b/scss/_soft-skills.scss
@@ -13,7 +13,7 @@
     position: absolute;
     z-index: 2;
     width: 100vw;
-    // min-height: 100vh;
+    min-height: 100vh;
   }
 
   .ssContainer {
