--- a/scss/main.css
+++ b/scss/main.css
@@ -438,10 +438,10 @@
     font-size: 2rem;
     color: #fff;
     background: #2f2f2f;
-    -webkit-transition: opacity 1s 1s, -webkit-clip-path 2s 1s;
-    transition: opacity 1s 1s, -webkit-clip-path 2s 1s;
-    transition: opacity 1s 1s, clip-path 2s 1s;
-    transition: opacity 1s 1s, clip-path 2s 1s, -webkit-clip-path 2s 1s;
+    -webkit-transition: opacity 1s 0s, -webkit-clip-path 1s 0s;
+    transition: opacity 1s 0s, -webkit-clip-path 1s 0s;
+    transition: opacity 1s 0s, clip-path 1s 0s;
+    transition: opacity 1s 0s, clip-path 1s 0s, -webkit-clip-path 1s 0s;
     -webkit-clip-path: circle(200px at top right);
             clip-path: circle(200px at top right);
   }
@@ -461,8 +461,8 @@
   }
   .main-header .menu-btn:checked ~ .nav-links .nav-link {
     opacity: 1;
-    -webkit-transition: opacity 2s ease-in-out;
-    transition: opacity 2s ease-in-out;
+    -webkit-transition: opacity 1s ease-in-out;
+    transition: opacity 1s ease-in-out;
   }
   .skillset:before {
     background-position-x: 50% !important;
@@ -503,7 +503,6 @@
   z-index: 1;
   display: block;
   opacity: 0.4;
-  background-size: cover;
   width: 100%;
   height: 100vh;
 }
@@ -674,7 +673,6 @@
   z-index: 1;
   display: block;
   opacity: 0.5;
-  background-size: cover;
   width: 100%;
   height: 100%;
 }
@@ -764,6 +762,7 @@
   position: absolute;
   z-index: 2;
   width: 100vw;
+  min-height: 100vh;
 }
 
 .soft-skills .ssContainer {
@@ -994,7 +993,7 @@
 
 .social a {
   color: #fff;
-  background: rgba(255, 255, 255, 0.1);
+  background: rgba(0, 0, 0, 0.7);
   font-size: 17px;
   font-weight: 600;
   text-decoration: none;
